--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/static/gold-cross.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script src="https://kit.fontawesome.com/96bca8a905.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
 	</head>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
