--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/static/gold-cross.png" />
+		<link rel="icon" href="/gold-cross.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://kit.fontawesome.com/96bca8a905.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
