--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/gold-cross.png" />
+		<title>Kansas ATO</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script src="https://kit.fontawesome.com/96bca8a905.js" crossorigin="anonymous"></script>
 		%sveltekit.head%
